infrastructure/k8s/base/bot-discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-discord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot-discord
  template:
    metadata:
      labels:
        app: bot-discord
    spec:
      containers:
        - name: bot-discord
          image: ghcr.io/imustiere/discordtranslator-bot-discord:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
